--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,4 @@
 # This file lists all contributors to the repository.
 # See hack/generate-authors.sh to make modifications.
 
-
+vn-vision <vctrngang@gmail.com>
